public/stylesheets/index.css
.container {
  padding: 0 0 0 0;
  width: 100%;
  position: relative;
  overflow: hidden;
}

.topnav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-left: 10px;
  width: auto;
  overflow: hidden;
  background-color: rgba(255, 255, 255, 0.3);
  height: 40px;

}

.topnav li {
  float: left;
}

.topnav li a {
  display: block;
  color: #000;
  text-align: center;
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  font-size: 8pt;
}

.navbar-left a{
  padding: 14px 23px;
  text-decoration: none;
  transition: color 0.3s linear;
}

.topnav li a:hover {
  color: #fff;
}

.topnav li.navbar-right {
  float: right !important;
  margin-right: 20px;
}

.topnav img {
  width: 30px;
  text-align: right;
  transition: -webkit-filter 0.3s linear;

  padding-top: 4px;
}

.topnav img:hover {
  -webkit-filter: invert(1);
}


ul li {
  padding: 0;
  margin: 0;
  list-style: none;
}

#section-top {
  /* margin-top: 100px; */
  margin-bottom: 50px;
  padding-bottom: 20px;
}

canvas {

  z-index: -1;
  position: absolute;
  width: 100%;
  height: auto;

}

.portrait {
  width: 20vw;
  height: 20vw;
  position: relative;
  overflow: hidden;
  border-radius: 50%;
  margin: auto;
  display: block;
  top: 70px;
}

.portrait img {
  width: 100%;
  /* transition: -webkit-filter 1.0s linear; */
  transition: -webkit-filter 1s linear;
  transition: opacity 1s linear;
}

.portrait img:hover {
  -webkit-filter: invert(1);
  opacity: 0.0;
    /* -webkit-filter: alpha(opacity=50); */
}


.info {
  padding-top: 80px;
}

#name {
  /* z-index: +2; */
  color: #000;
  text-align: center;
  font-family: 'Roboto', sans-serif;
  font-size: 20pt;
  font-weight: 400;
  /* padding: 15px 16px; */
  text-decoration: none;
}

#info a{
  color: #000;
  font-family: 'Roboto', sans-serif;
  font-size: 12pt;
  font-weight: 300;
  padding: 15px 16px;
  text-decoration: none;
}

#info {
  text-align: center;
}

/* PROJECTS */

/* #section-projects {
  pa
} */

.wrap {
  text-align: center;
  overflow: hidden;
  margin: 0 auto;
  padding-bottom: 300px;
  padding-top: 100px;
}

.box {
  background-color: white;
  text-align: center;
  display: inline-block;
  position: relative;
  border: 3px solid #000;
  border-radius: 10%;
  width: 20%;
  padding-bottom: 20%;
  margin: 2%;
  text-decoration: none;
  transition: border 0.3s linear;
    -webkit-transition: border 0.3s linear;
    -moz-transition: border 0.3s linear;
}
.box:hover {
  border: 3px solid #fff;
}

/* body img {
  border-radius: 8%;
} */

.boxInner {
  position: absolute;
  left: 15px;
  right: 15px;
  top: 15px;
  bottom: 15px;
  overflow: hidden;
}

.boxInner img {
  width: 100%;
}

.boxInner .titleBox {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin-bottom: -50px;
  background: #000;
  background: rgba(0, 0, 0, 0.5);
  color: #FFF;
  padding: 10px;
  text-align: center;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
  -o-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  font-family: 'Raleway', sans-serif;
  font-size: 10pt;
  font-weight: 200;
  color: white;
}

body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleBox {
  margin-bottom: 0;
}

@media only screen and (min-width: 1051px) {
  .box {
    width: 25%;
    padding-bottom: 25%;
  }
  .infoSec {
    width: 1000px;
    text-align: center;
    text-align: justify;
  }
  .portrait {
    width: 150px;
    height: 150px;
  }
  #section-top {
    height: 500px;
  }
  canvas {
    height: 500px;
  }
}
@media only screen and (max-width: 1050px) and (min-width: 651px) {
  .box {
    width: 33.3%;
    padding-bottom: 33.3%;
  }
  .infoSec {
    width: 600px;
    text-align: center;
    text-align: justify;
  }
  .portrait {
    width: 120px;
    height: 120px;
  }
  #section-top {
    height: 400px;
  }
  canvas {
    height: 400px;
  }
}
@media only screen and (max-width: 650px) and (min-width: 481px) {
  .box {
    width: 50%;
    padding-bottom: 50%;
  }
  .infoSec {
    width: 500px;
    text-align: center;
    text-align: justify;
  }
  .portrait {
    width: 100px;
    height: 100px;
  }
  #section-top {
    height: 400px;
  }
  canvas {
    height: 400px;
  }

}
@media only screen and (max-width: 480px) {
  .box {
    width: 50%;
    padding-bottom: 50%;
  }
  .infoSec {
    width: 400px;
    text-align: center;
    text-align: justify;
  }
  .portrait {
    width: 90px;
    height: 90px;
  }
  canvas {
    display: none;
  }
}

#top {
  margin: 0 auto;
}

.infoSec {
  /* text-align: center; */
  display: none;
  margin: 0 auto;
  color: #000;
  font-family: 'Roboto', sans-serif;
  font-size: 12pt;
  font-weight: 300;
  padding: 20px 26px;
}


/*  LUMA */

.tools-container-main {
  width: 100%;
  /* height: 300px; */
  text-align: center;
  overflow: hidden;
  margin: 0 auto;
  padding-top: 50px;
}

.tools-container-inner {
  text-align: center;
  display: inline-block;
  position: relative;
  margin: 0;
  width: 300px;
  /* text-align: left; */
  /* float: left; */
}


.tools-container-main p {
  font-family: 'Railway', sans-serif;
  font-size: 20pt;
  font-weight: 300;
}

.tools-container-main li {
  font-family: 'Railway', sans-serif;
  font-size: 14pt;
  font-weight: 100;
  text-align: left;
}

.tools-content {
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-left: 10px;
  overflow: hidden;
  background-color: #FFF;
  display: inline-block;
  /* float: left; */
}


.tools-label {
  float: left;
  padding-left: 92px;
}

.tools-content {
    width: 80%;
    height: 100px;
    /* background: aqua; */
    margin: auto;
    padding: 10px;
    padding-left: 92px;
}



.tools-line {
    /* width: 15%; */
    height: 200px;
    /* background: red; */
    float: left;
    border-left: 1px solid black;
    height: 50px;
    margin-top: 2px;
}
.tools-info {
    /* margin-left: 15%; */
    height: 200px;
    padding-top: 0;
    /* background: black; */
}

.tools-info ul {
  margin: 0;
  padding-left: 30px;
}

.tools-info li {
  text-align: left;
}

.icons {
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-left: 10px;
  overflow: hidden;
  display: inline-block;
  height: 150px;
  width: 100%;
}

/* .icons img {
  width: 10%;
  float: left;
  padding-right: 6%;
  padding-bottom: 5%;
  transition: width 0.3s linear;
}

.icons img:hover {
  padding-bottom: 5%;
  width: 15%;
} */
.project-container {
  padding-top: 40px;
  padding-left: 123px;
  height: auto;
}

.info-container {
  height: 300px;
}

.decription p {
  width: 300px;
  text-align: left;
}



@media only screen and (min-width: 1051px) {
  .project-container {
    padding-top: 40px;
    padding-left: 0px !important;
  }

  .icons {
    padding-left: 123px;
  }

  .icons img {
    width: 100px;
    float: left;
    padding-right: 60px;
    padding-bottom: 20px;
    transition: width 0.3s linear;
  }

  .icons img:hover {
    padding-bottom: 15px;;
    width: 120px;
  }

  .decription p {
    width: 300px;
    text-align: left;
  }

  /* .project-container {
    padding-top: 40px;
    padding-left: 123px;
  } */

  .description1 {
    padding-left: 125px;
  }
  .description2 {
    padding-left: 280px;
  }
  .description3 {
    padding-left: 440px;
  }
  .description4 {
    padding-left: 600px;
  }

  .images-container {
    padding-top: 100px;
    padding-bottom: 100px;
    display: grid;
    grid-template-columns: 400px 400px;
    grid-gap: 40px;
    justify-content: center;
  }

  .image-box {
    padding: 0px;
  }

  .image-box img {
    width: 400px;
    border-radius: 10px;
    /* transition: width 0.3s linear; */
  }

  /* .image-box img:hover {
    padding-right: 40px !important;
    width: 500px;
  } */

}
@media only screen and (max-width: 1050px) and (min-width: 651px) {
  .project-container {
    padding-top: 40px;
    padding-left: 0px !important;
  }

  .icons {
    padding-left: 100px;
  }

  .icons img {
    width: 70px;
    float: left;
    padding-right: 40px;
    padding-bottom: 15px;
    transition: width 0.3s linear;
  }

  .icons img:hover {
    padding-bottom: 7px;
    width: 90px;
  }

  .decription p {
    width: 300px;
    text-align: left;
    font-size: 11pt;
  }

  /* .project-container {
    padding-top: 40px;
    padding-left: 123px;
  } */

  .description1 {
    padding-left: 100px;
  }
  .description2 {
    padding-left: 100px;
  }
  .description3 {
    padding-left: 100px;
  }
  .description4 {
    padding-left: 100px;
  }
  .images-container {
    padding-top: 100px;
    padding-bottom: 100px;
    display: grid;
    grid-template-columns: 300px 300px;
    grid-gap: 40px;
    justify-content: center;
  }

  .image-box {
    padding: 0px;
  }

  .image-box img {
    width: 300px;
    border-radius: 10px;
  }


}
@media only screen and (max-width: 650px) and (min-width: 481px) {
  .project-container {
    padding-top: 40px;
    padding-left: 0px !important;
  }

  .icons {
    padding-left: 65px;
  }

  .icons img {
    width: 70px;
    float: left;
    padding-right: 30px;
    padding-bottom: 60px;
    transition: width 0.3s linear;
  }

  .icons img:hover {
    padding-bottom: 5%;
    width: 90px;
  }

  .decription p {
    width: 300px;
    text-align: left;
    font-size: 11pt;
  }

  /* .project-container {
    padding-top: 40px;
    padding-left: 123px;
  } */

  .description1 {
    padding-left: 65px;
  }
  .description2 {
    padding-left: 65px;
  }
  .description3 {
    padding-left: 65px;
  }
  .description4 {
    padding-left: 65px;
  }

  .images-container {
    padding-top: 100px;
    padding-bottom: 100px;
    display: grid;
    grid-template-columns: 400px;
    grid-gap: 40px;
    justify-content: center;
  }

  .image-box {
    padding: 0px;
  }

  .image-box img {
    width: 400px;
    border-radius: 10px;
  }

}
@media only screen and (max-width: 480px) {
  .project-container {
    padding-top: 40px;
    padding-left: 0px;
  }

  .icons img {
    width: 50px;
    float: left;
    padding-right: 30px;
    padding-bottom: 60px;
    transition: width 0.3s linear;
  }

  .icons img:hover {
    padding-bottom: 5%;
    width: 80px;
  }

  .decription p {
    width: 300px;
    text-align: left;
    font-size: 11pt;
  }

  /* .project-container {
    padding-top: 40px;
    padding-left: 123px;
  } */

  .description1 {
    padding-left: 0px;
  }
  .description2 {
    padding-left: 0px;
  }
  .description3 {
    padding-left: 0px;
  }
  .description4 {
    padding-left: 0px;
  }

  .images-container {
    padding-top: 100px;
    padding-bottom: 100px;
    display: grid;
    grid-template-columns: 400px;
    grid-gap: 40px;
    justify-content: center;
  }

  .image-box {
    padding: 0px;
  }

  .image-box img {
    width: 400px;
    border-radius: 10px;
  }


}

